syntax = "proto3";
package gofakeit.test;

import "gofakeit/gofakeit.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/rodaine/protogofakeit/gen/gofakeit/test";

message WKTTimestamp {
  google.protobuf.Timestamp default_ts = 1;
  google.protobuf.Timestamp tag = 2 [(gofakeit.generate).tag = "{date}"];
}

message WKTTimestampCustom {
  google.protobuf.Timestamp value = 1 [(gofakeit.generate).tag = "Jul 10 2023 12:34:56"];
}

message WKTDuration {
  google.protobuf.Duration default_dur = 1;
  google.protobuf.Duration tag = 2 [(gofakeit.generate).tag = "{minute}m{second}s"];
}
